# lopdf

./: .editorconfig  .gitattributes  .gitignore  .travis.yml  CHANGELOG.md  Cargo.toml  LICENSE  README.md  rustfmt.toml
.chglog/: config.yml
.github/workflows/: ci.yml  release.yml
benches/: datetime.rs  parse.rs
examples/: add_barcode.rs  analyze_object_streams.rs  analyze_page_contents.rs  analyze_pdf.rs  analyze_references.rs  check_raw_objstream.rs  compress_existing_pdf.rs  create.rs  create_text_heavy_pdf.rs  debug_compression_detailed.rs  debug_compression_full.rs  debug_object_stream.rs  debug_save_with_objstreams.rs  decompression_bomb.rs  decrypt.rs  delete_outlines.rs  encrypt.rs  extract_text.rs  extract_toc.rs  final_compression_test.rs  inspect_object_stream.rs  merge.rs  object_streams.rs  print_annotations.rs  replace_partial_text.rs  rotate.rs  test_better_compression.rs  test_decryption.rs  test_direct_objstream.rs  test_filter_roundtrip.rs  test_metadata.rs  test_object_stream_creation.rs  test_object_stream_roundtrip.rs  test_real_pdf_compression_with_fix.rs  test_structural_compression.rs  verify_decryption.rs  verify_page_compression.rs  verify_pdf.rs  verify_trailer_compression_fix.rs
pdfutil/: Cargo.toml  README.md
pdfutil/src/: main.rs
src/: async_reader.rs  bookmarks.rs  byref.rs  cmap_parser.rs  cmap_section.rs  content.rs  creator.rs  datetime.rs  destinations.rs  document.rs  encryption.rs  error.rs  font.rs  incremental_document.rs  lib.rs  load_options.rs  nom_cmap_parser.rs  nom_parser.rs  object.rs  object_stream.rs  outlines.rs  parser.rs  parser_aux.rs  processor.rs  rc4.rs  reader.rs  save_options.rs  toc.rs  writer.rs  xobject.rs  xref.rs
src/common_data_structures/: mod.rs
src/encodings/: cmap.rs  differences.rs  encodings.rs  glyphnames.rs  mappings.rs  mod.rs
src/encryption/: algorithms.rs  crypt_filters.rs  pkcs5.rs  rc4.rs
src/filters/: mod.rs  png.rs
src/parser/: cmap_parser.rs  mod.rs
tests/: annotation.rs  catalog_compression_integration_test.rs  decompression_bomb.rs  decryption.rs  document_load_performance.rs  extract_test.rs  font_test.rs  incremental_document.rs  linearized_objstm_test.rs  load_options_test.rs  metadata_test.rs  modify.rs  object_stream_comprehensive_test.rs  object_stream_edge_cases_test.rs  object_stream_methods_test.rs  object_stream_performance_test.rs  page_content.rs  simple_object_stream_test.rs  trailer_reference_compression_test.rs  unicode.rs  utils.rs  xref_stream_self_entry_test.rs
tests/regression/: document_load_performance.rs
