[package]
authors = [
    "Junfeng Liu <china.liujunfeng@gmail.com>",
    "Emulator <emulator@hotmail.it>",
]
categories = ["text-processing"]
description = "A Rust library for PDF document manipulation."
documentation = "https://docs.rs/crate/lopdf/"
edition = "2021"
homepage = "https://github.com/J-F-Liu/lopdf"
keywords = ["pdf", "editing", "manipulation", "merge"]
license = "MIT"
name = "lopdf"
readme = "README.md"
repository = "https://github.com/J-F-Liu/lopdf.git"
version = "0.34.0"
rust-version = "1.74"

[dependencies]
chrono = { version = "0.4", optional = true, features = [
    "std",
    "clock",
], default-features = false }
encoding_rs = "0.8.32"
flate2 = "1.0"
image = { version = "0.25", optional = true }
indexmap = "2.2.3"
itoa = "1.0"
log = "0.4"
md-5 = "0.10"
nom = { version = "7.1", optional = true }
nom_locate = { version = "4.2.0", optional = true }
pom = { version = "3.2", optional = true }
rayon = { version = "1.6", optional = true }
serde = { version = "1.0", features = ["derive"], optional = true }
time = { version = "0.3", features = ["formatting", "parsing"] }
tokio = { version = "1", features = ["fs", "io-util"], optional = true }
weezl = "0.1"
rangemap = "1.5"

[dev-dependencies]
clap = { version = "4.0", features = ["derive"] }
env_logger = "0.11"
serde_json = "1.0"
shellexpand = "3.0"
tempfile = "3.3"

[features]
async = ["tokio/rt-multi-thread", "tokio/macros"]
chrono_time = ["chrono"]
default = ["chrono_time", "nom_parser", "rayon"]
embed_image = ["image"]
nom_parser = ["nom", "nom_locate"]
pom_parser = ["pom"]
serde = ["dep:serde"]

[[example]]
name = "add_barcode"
required-features = ["pom_parser"]

[[example]]
name = "extract_toc"
required-features = ["serde"]

[[example]]
name = "extract_text"
required-features = ["serde"]

[[example]]
name = "print_annotations"
required-features = ["default"]

[[example]]
name = "rotate"
required-features = ["nom_parser"]

[[test]]
name = "modify"
required-features = ["pom_parser"]

[badges]
travis-ci = { repository = "J-F-Liu/lopdf" }
