[package]
authors = [
    "Junfeng Liu <china.liujunfeng@gmail.com>",
    "Emulator <emulator@hotmail.it>",
]
categories = ["text-processing"]
description = "A Rust library for PDF document manipulation."
documentation = "https://docs.rs/crate/lopdf/"
edition = "2024"
homepage = "https://github.com/J-F-Liu/lopdf"
keywords = ["pdf", "editing", "manipulation", "merge"]
license = "MIT"
name = "lopdf"
readme = "README.md"
repository = "https://github.com/J-F-Liu/lopdf.git"
version = "0.44.0"
rust-version = "1.88"
exclude = ["/benches", "/assets", "/.chglog", "/.vscode", "/.github"]

[dependencies]
aes = "0.9"
bitflags = "2.13"
cbc = "0.2"
chrono = { version = "0.4", optional = true, default-features = false, features = [
    "std",
    "clock",
] }
ecb = "0.2"
encoding_rs = "0.8"
flate2 = "1.1"
image = { version = "0.25", optional = true }
indexmap = "2.14"
itoa = "1.0"
jiff = { version = "0.2", optional = true }
getrandom = "0.4"
log = "0.4"
md-5 = "0.11"
nom = "8.0"
rand = { version = "0.10" }
rangemap = "1.7"
rayon = { version = "1.12", optional = true }
serde = { version = "1.0", features = ["derive"], optional = true }
sha2 = "0.11"
stringprep = "0.1.5"
thiserror = "2.0"
time = { version = "0.3", features = [
    "formatting",
    "parsing",
], optional = true }
tokio = { version = "1", features = ["fs", "io-util"], optional = true }
weezl = "0.2"
ttf-parser = { version = "0.25.1", optional = true }

[dev-dependencies]
clap = { version = "4.6", features = ["derive"] }
env_logger = "0.11"
flate2 = "1.1"
serde_json = "1.0"
shellexpand = "3.1"
tempfile = "3.27"
wasm-bindgen-test = "0.3"
ttf-parser = "0.25.1"

[target.'cfg(not(target_family="wasm"))'.dev-dependencies]
criterion = "0.8"

[features]
async = ["tokio/rt-multi-thread", "tokio/macros"]
chrono = ["dep:chrono"]
default = ["chrono", "jiff", "rayon", "time"]
embed_image = ["image"]
font_embedding = ["dep:ttf-parser"]
jiff = ["dep:jiff"]
wasm_js = ["getrandom/wasm_js"]
serde = ["dep:serde"]
time = ["dep:time"]

[[example]]
name = "extract_toc"
required-features = ["serde"]

[[example]]
name = "extract_text"
required-features = ["serde"]

[[example]]
name = "print_annotations"
required-features = ["default"]

[[example]]
name = "rotate"

[[bench]]
name = "datetime"
harness = false

[[bench]]
name = "parse"
harness = false

[badges]
travis-ci = { repository = "J-F-Liu/lopdf" }
